More Junit updates